--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </head>
 
 <body>
-    <aproch-flow-view id="flow-view" name="flow view" class="flow-view">
+    <aproch-flow-view id="fv_1" name="flow view" class="flow-view">
         <div style="position: fixed;padding: 4px 10px; left: 20px; top: 60px;">
             <svg id="svg-id" xmlns="http://www.w3.org/2000/svg" version="1.1" style="padding:4px;">
             </svg>
         </div>
     </aproch-flow-view>
     <div style="position: fixed; left: 30px">
-        <button style="padding: 4px 10px; left: 20px; top: 20px;" onclick="addNodeTest('#flow-view ');">添加节点</button>
+        <button style="padding: 4px 10px; left: 20px; top: 20px;" onclick="addNodeTest('#fv_1');">添加节点</button>
+        <aproch-input-number></aproch-input-number>
     </div>
     <!-- <button style="position: fixed;padding: 4px 10px; left: 20px; top: 60px;" onclick="deleteNodeTest('#flow-view ');">删除节点</button> svg -->
 
     <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="./core/utilities.js"></script>
-    <script type="text/javascript" src="./core/draggable-widget.js"></script>
-    <script src="./core/AWidget.js"></script>
+    <script type="text/javascript" src="./core/AWidget.js"></script>
     <script type="text/javascript" src="./core/Aproch.js"></script>
     <script>
         $(document).ready(function() {
