修复试图、节点移动问题，解决选择框不能正常显示问题

--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
 
 <body>
     <aproch-flow-view id="fv_1" name="flow view" class="flow-view">
-        <div style="position: fixed;padding: 4px 10px; left: 20px; top: 60px;">
-            <svg id="svg-id" xmlns="http://www.w3.org/2000/svg" version="1.1" style="padding:4px;">
-            </svg>
-        </div>
     </aproch-flow-view>
     <div style="position: fixed; left: 30px">
-        <button style="padding: 4px 10px; left: 20px; top: 20px;" onclick="addNodeTest('#fv_1');">添加节点</button>
-        <!-- <!-- <aproch-input-number></aproch-input-number> -->
+        <!-- <button style="padding: 4px 10px; left: 20px; top: 20px;" onclick="addNodeTest('#fv_1');">添加节点</button> -->
+        <!-- <aproch-input-number></aproch-input-number> -->
     </div>
-    <!-- <button style="position: fixed;padding: 4px 10px; left: 20px; top: 60px;" onclick="deleteNodeTest('#flow-view ');">删除节点</button> svg -->
 
     <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="./core/utilities.js"></script>
