--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Node Widget</title>
     <link rel="stylesheet" href="css/style.default.css">
-    <!-- <link rel="stylesheet" href="vendor/bootstrap-4.3.1/css/bootstrap.min.css"> -->
 </head>
 
 <body>
@@ -15,82 +14,7 @@
     </aproch-flow-view>
 
     <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
-    <script type="module">
-        import { IDataModel } from './core/DataModel.js'
-        import { ALabelWidget, AInputNumberWidget } from './core/AWidget.js'
-        import { AFlowView, ANode, AConnection, AInterface, APort } from './core/Aproch.js'
-
-        //var FVManager = [];
-        const CurrentFV = document.querySelector('#fv_1');
-
-        class OutDataModel extends IDataModel {
-            constructor() {
-                super();
-
-                this.ui = new AInputNumberWidget('数据模型测试');
-
-                this.inputData = (data) => {
-                    this.ui.value = data;
-                }
-
-                this.outputData = () => {
-                    console.log('this.toString() :', this.toString());
-                }
-            }
-        }
-        class InDataModel extends IDataModel {
-            constructor() {
-                super();
-
-                this.ui = new ALabelWidget('数据模型测试');
-
-                this.inputData = (data) => {
-                    this.ui.value = data;
-                }
-
-                this.outputData = () => {
-                    console.log('this.toString() :', this.toString());
-                }
-            }
-        }
-
-        $(document).ready(function () {
-            // 防止按下(F5、Ctrl+R、Ctrl+Shift+R)刷新
-            window.onkeydown = function (e) {
-                var ev = window.event || e;
-                var code = ev.keyCode || ev.which;
-                if (code == 82 && (ev.metaKey || ev.ctrlKey)) {
-                    return false;
-                }
-            }
-
-            customElements.define('aproch-label-widget', ALabelWidget);
-            customElements.define('aproch-input-number', AInputNumberWidget);
-            customElements.define('aproch-flow-view', AFlowView);
-            customElements.define('aproch-node', ANode);
-            customElements.define('aproch-interface', AInterface);
-            customElements.define('aproch-port', APort);
-            customElements.define('aproch-connection', AConnection);
-
-            let node = new ANode(CurrentFV, 200, 200, "Out Node");
-            let itf = new AInterface(node, false, true);
-            itf.setDataModel(new OutDataModel());
-            
-            let node2 = new ANode(CurrentFV, 400, 200, "In Node");
-            let itf2 = new AInterface(node2, true, false);
-            itf2.setDataModel(new InDataModel());
-        });
-
-        function addNodeTest(x = 100, y = 100) {
-
-            let node = new ANode(CurrentFV, x, y, "My Node");
-            let itf = new AInterface(node, false, true);
-
-            itf.setDataModel(new MyDataModel());
-
-            node._propagationData();
-        }
-    </script>
+    <script type="module" src="./test/node_registry_test.js"></script>
 </body>
 
 </html>
