--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <aproch-flow-view id="fv_1" name="flow view" class="flow-view">
-    </aproch-flow-view>
+    <a-flow-view id="fv_1" name="flow view" class="flow-view">
+    </a-flow-view>
 
     <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
     <script type="module" src="./test/node_registry_test.js"></script>
