修复部分已知问题

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a-flow-view id="fv_1" name="flow view" class="flow-view">
     </a-flow-view>
 
-    <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="./lib/jquery/jquery-3.4.1.min.js"></script>
     <script type="module" src="./test/node_registry_test.js"></script>
 </body>
 
