--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </a-flow-view>
 
     <script type="text/javascript" src="./lib/jquery/jquery-3.4.1.min.js"></script>
-    <script type="module" src="./test/node_registry_test.js"></script>
+    <script type="module" src="./core/index.js"></script>
+    <script type="module" src="./test/BaseDataModelNodes.js"></script>
 </body>
 
 </html>
